# api-lens-backend

./: .dev.vars  .env.example  Dockerfile  INTEGRATION_TESTING_GUIDE.md  README.md  SECURITY_AUDIT_SUMMARY.md  analytics_showcase.py  analyze_timestamps.py  backend_project_plan.csv  check_latest_geo.py  check_location_test.py  check_schema.py  complete_test_with_all_fields.py  demo_location_population.py  docker-compose.yml  final_production_test.py  fix_schema_compliance.py  image_generation_results.json  manual_test.py  populate_location_data.py  quick_location_fix.py  railway.json  requirements.txt  run_location_migration.py  run_schema_v2_migration.py  simple_analytics.py  simple_final_test.py  test_production_geolocation.py  test_results.json  test_schema_compliance.py  update_latest_geo.py
app/: __init__.py  config.py  database.py  main.py  test_database.py
app/api/: admin.py  admin_auth_endpoints.py  admin_simple.py  analytics.py  auth.py  company.py  health.py  proxy.py  proxy_optimized.py
app/auth/: admin_auth.py
app/clients/: anthropic_client.py  gemini_client.py  openai_client.py
app/core/: wrappers.py
app/middleware/: error_handling.py  request_middleware.py  security.py
app/services/: analytics.py  anomaly_detection.py  auth.py  cache.py  company.py  cost.py  cost_monitoring.py  encryption.py  geolocation.py  image_generation.py  location_timezone.py  monitoring.py  monitoring_helpers.py  pricing.py  pricing_old.py  pricing_sync.py  quota_management.py  ratelimit.py  real_time_cost.py  report_generation.py  session_analytics.py  usage_parsers.py
app/utils/: db_errors.py  location.py  logger.py  production_logger.py  supabase_client.py  timezone.py  validation.py
chatbot/: app.py
database/: README.md  init_db.py
database/migrations/: 001_cost_and_rate_limiting_migration.sql  002_quota_management_migration.sql  003_monitoring_system_migration.sql  004_admin_system_migration.sql  005_worker_logging_system.sql
database/schema/: 01_core_system.sql  01_initial_schema.sql  02_company_schema.sql  03_cost_calculation_schema.sql  04_quota_management_schema.sql
docs/: README.md  authentication.md  getting-started.md  redis-key-design.md
docs/sdks/javascript/: README.md  package.json  tsconfig.json
docs/sdks/python/: README.md  pyproject.toml  requirements.txt  setup.py
docs/sdks/python/apilens/: __init__.py  cli.py  client.py  exceptions.py  models.py  vendors.py
migrations/: 001_complete_schema_replacement.sql  002_composite_keys_and_partitioning.sql  002_views_and_functions.sql  003_add_user_sessions.sql  003_initial_data.sql  004_complete_schema_v2.sql  005_add_schema_name_to_companies.sql  006_create_vendor_keys_table.sql  006_remove_hardcoded_constraints.sql  007_add_location_based_timestamps.sql  008_add_image_generation_support.sql
models/: api_key.py  billing.py  company.py
proxy/: main.py
proxy/clients/: anthropic_client.py  gemini_client.py  openai_client.py
scripts/: check_models.py  comprehensive_e2e_test.py  comprehensive_multi_client_test.py  generate_keys.py  generate_master_key.py  init_db.py  insert_vendor_and_model.py  migrate_db.py  populate_all_models.py  populate_models_fixed.py  production_readiness_test.py  redis_browser.py  run_migration.py  run_security_audit.py  run_worker_logging_migration.py  setup_supabase.py  setup_test_db.py  simple_init_db.py  simplified_e2e_test.py  test_connection.py  test_database_connection.py  test_redis_connection.py  test_redis_operations.py  test_supabase_connection.py  verify_schema_compliance.py  workers_latency_test.py  working_e2e_test.py
sql/: company_schema.sql  core_tables.sql  init_schema.sql
sql/migrations/: 004_fix_vendor_model_function.sql  005_create_get_or_create_user.sql
test_data/: test_api_lens.db
tests/: image_generation_results.json  run_phase7_complete.py  test_auth_service.py  test_byok_functionality.py  test_cache_service.py  test_company_operations.py  test_complete_e2e_flow.py  test_comprehensive_performance.py  test_cost_calculation_accuracy.py  test_database.py  test_database_integration.py  test_encryption_service.py  test_gemini_models.py  test_global_latency.py  test_global_latency_comprehensive.py  test_global_latency_external.py  test_image_generation.py  test_integration_e2e.py  test_logging_simple.py  test_penetration_testing.py  test_performance_benchmarks.py  test_performance_regression.py  test_proxy_chat.py  test_rate_limiting_quota.py  test_security_audit.py  test_security_validation.py  test_worker_logging.py
workers-proxy/: .dev.vars  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
workers-proxy/src/: auth.ts  cost.ts  error-handler.ts  index.ts  logger.ts  ratelimit.ts  types.ts  validation.ts  vendor.ts
workers-proxy/test/: auth.test.ts  basic.test.ts  ratelimit.test.ts  vendor.test.ts
workers-proxy/tests/: cost-unit.test.ts  cost.test.ts
(+31 files in other folders)
